Spinner layout bug fixed for tablet

--- a/src/styling/components/subcomponents/LoadingSpinner.css
+++ b/src/styling/components/subcomponents/LoadingSpinner.css
@@ -4,10 +4,15 @@
     margin-top: 175px;
     margin-bottom: 300px;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
     .loadingSpinner {
         margin-top: 200px;
-        margin-bottom: 350px;
+        margin-bottom: 500px;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .loadingSpinner {
+        margin-bottom: 400px;
     }
 }
 @media only screen and (max-height: 400px) {
